# PlayerBagManager

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.txt  CHANGELOG_en.md  CMakeLists.txt  DataHeleper.cpp  DataHeleper.h  FormHelper.cpp  JsonHelper.cpp  JsonHelper.h  LINK.txt  LLCheckBag.sln  LLCheckBag.vcxproj  LLCheckBag.vcxproj.filters  Plugin.cpp  README.md  README_en.md  SymHelp.cpp  SymHelp.h  dllmain.cpp  pch.h  prepare_libraries.cmd  tooth.json  xmake.lua
.github/workflows/: auto-update.yml  build.yml  cmake-build.yml  msbuild.yml  release.yml
Data/Language/: en_US.json  lang.json  zh_CN.json
LLCheckBag/: CheckBagManager.cpp  CheckBagManager.h  Config.cpp  Config.h  DebugHelper.h  FormHelper.cpp  FormHelper.h  LLCheckBag.aps  LLCheckBag.vcxproj  LLCheckBag.vcxproj.filters  PlayerDataHelper.cpp  PlayerDataHelper.h  Plugin.cpp  Utils.h  Version.h  dllmain.cpp  pch.h  resource.h
data/lang/: lang.json
scripts/: UploadTooth.cmd  checkLLRelease.py  publish_minebbs.py
src/player-bag-manager/: CheckBagManager.cpp  CheckBagManager.h  Config.cpp  Config.h  PlayerBagManager.cpp  PlayerBagManager.h  PlayerDataHelper.cpp  PlayerDataHelper.h  Version.h
src/player-bag-manager/command/: PlayerBagManagerCommand.cpp  PlayerBagManagerCommand.h
